--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
       crossorigin="anonymous"
     ></script>
-    <title>SB Admin App</title>
+    <title>Montracker | Abhishek | B262WD</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
